--- a/src/app/modules/promociones/detalle-promocion/detalle-promocion.component.html
+++ b/src/app/modules/promociones/detalle-promocion/detalle-promocion.component.html
@@ -35,8 +35,8 @@
                  [formControl]="txProducto"
                  [matAutocomplete]="autoCompleteProducto">
         </mat-form-field>
-        <mat-autocomplete #autoCompleteProducto="matAutocomplete">
-          <mat-option *ngFor="let producto of this.productosFiltrados" [value]="producto.nombre">
+        <mat-autocomplete #autoCompleteProducto="matAutocomplete" (optionSelected)="enSeleccionDeProducto($event)">
+          <mat-option *ngFor="let producto of this.productosFiltrados" [value]="producto.nombre" [id]="producto.id.toString()">
             {{ producto.nombre }}
           </mat-option>
         </mat-autocomplete>
