--- a/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
+++ b/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
@@ -47,6 +47,10 @@
     <h2 style="color: grey">Proveedores encontrados</h2>
   </mat-card-header>
 
+  <!-- loading -->
+  <div class="lds-spinner-wrapper" *ngIf="proveedores.length == 0"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div></div>
+
+
   <mat-card *ngIf="proveedores.length > 0">
     <mat-card-content>
       <div class="row">
