--- a/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.scss
+++ b/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.scss
@@ -1,6 +1,6 @@
 .upload-container {
-  width: 100%;
-  height: 300px;
+  width: 600px;
+  height: 500px;
   border: 2px dashed #ccc;
   border-radius: 10px;
   position: relative;
@@ -36,10 +36,14 @@
   border-radius: 10px;
 }
 
+.comment-container {
+  flex-grow: 1;
+  margin-left: 20px;
+}
+
 .comment-textarea {
   width: 100%;
-  height: 150px;
-  margin-top: 20px;
+  height: 500px;
   font-size: 16px;
   padding: 10px;
 }
