--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -1,146 +1,109 @@
-<!--<div class="container py-3 col-xl-11">-->
-<!--  <mat-card class="mat-elevation-z12 p-4">-->
-<!--    <div class="row">-->
-<!--      <div class="col d-flex justify-content-between align-items-center">-->
-<!--        <p class="titulo">Consultar Empleados</p>-->
-<!--        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoEmpleado()">Registrar nuevo empleado</button>-->
-<!--      </div>-->
-<!--    </div>-->
+<div class="container py-3 col-xl-11">
+  <mat-card class="mat-elevation-z12 p-4">
+    <div class="row">
+      <div class="col d-flex justify-content-between align-items-center">
+        <p class="titulo">Consultar Empleados</p>
+        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoEmpleado()">Registrar nuevo empleado</button>
+      </div>
+    </div>
 
-<!--    <mat-divider></mat-divider>-->
+    <mat-divider></mat-divider>
 
-<!--    <br>-->
-<!--    <h4>Filtros de búsqueda</h4>-->
+    <br>
+    <h4 style="color: grey">Filtros de búsqueda</h4>
 
-<!--    <form [formGroup]="form">-->
-<!--      <div class="row pt-4">-->
-<!--        <div class="col-md-2">-->
-<!--          <mat-form-field appearance="outline" class="w-100">-->
-<!--            <mat-label>Nombre</mat-label>-->
-<!--            <input type="text" matInput [formControl]="txNombre"/>-->
-<!--          </mat-form-field>-->
-<!--          &lt;!&ndash;-->
-<!--          <caja-control-messages [control]="txCodigo"></caja-control-messages>-->
-<!--          &ndash;&gt;-->
-<!--        </div>-->
-<!--        <div class="col-md-3">-->
-<!--          <mat-form-field appearance="outline" class="w-100">-->
-<!--            <mat-label>Apellido</mat-label>-->
-<!--            <input type="text" matInput [formControl]="txApellido"/>-->
-<!--          </mat-form-field>-->
-<!--        </div>-->
-<!--        <div class="col-md-4">-->
-<!--          <mat-form-field appearance="outline" class="w-100">-->
-<!--            <mat-label>DNI</mat-label>-->
-<!--            <input type="text" matInput [formControl]="txDNI"/>-->
-<!--          </mat-form-field>-->
-<!--        </div>-->
-<!--        <div class="col-md-2">-->
-<!--          <mat-form-field appearance="outline" class="width-100" color="primary">-->
-<!--            <mat-label>Genero</mat-label>-->
-<!--            <mat-select [formControl]="txGenero">-->
-<!--              <mat-option [value]="1">Masculino</mat-option>-->
-<!--              <mat-option [value]="2">Femenino</mat-option>-->
-<!--            </mat-select>-->
-<!--          </mat-form-field>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </form>-->
+    <form [formGroup]="form">
+      <div class="row pt-4">
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Nombre</mat-label>
+            <input type="text" matInput [formControl]="txNombre"/>
+          </mat-form-field>
+          <!--
+          <caja-control-messages [control]="txCodigo"></caja-control-messages>
+          -->
+        </div>
+      </div>
+    </form>
 
 
-<!--    &lt;!&ndash; Btn de buscar y limpiar &ndash;&gt;-->
-<!--    <div class="row text-right">-->
-<!--      <div class="col d-flex justify-content-end">-->
-<!--        <button mat-button color="accent" class="btn round" (click)="limpiarFiltros()" id="btnLimpiarFiltro">-->
-<!--          <mat-icon>autorenew</mat-icon>-->
-<!--          Limpiar-->
-<!--        </button>-->
-<!--        <button mat-raised-button color="accent" class="btn round" (click)="buscar()" id="btnBuscar">Buscar</button>-->
-<!--      </div>-->
-<!--    </div>-->
+    <!-- Btn de buscar y limpiar -->
+    <div class="row text-right">
+      <div class="col d-flex justify-content-end">
+        <button mat-button color="accent" class="btn round" (click)="limpiarFiltros()" id="btnLimpiarFiltro">
+          <mat-icon>autorenew</mat-icon>
+          Limpiar
+        </button>
+        <button mat-raised-button color="accent" class="btn round" (click)="buscar()" id="btnBuscar">Buscar</button>
+      </div>
+    </div>
 
-<!--  </mat-card>-->
+  </mat-card>
 
-<!--  <br>-->
-
-
-<!--  <mat-card-header class="header-card">-->
-<!--    <h5>Empleados encontrados</h5>-->
-<!--  </mat-card-header>-->
-
-<!--  <mat-card>-->
-<!--    <mat-card-content>-->
-<!--      <div class="row">-->
-<!--        <div class="col-md-12">-->
-<!--          <mat-table [dataSource]="tableDataSource" matSort>-->
-<!--            &lt;!&ndash;-->
-<!--            <ng-container matColumnDef="nrormtsa">-->
-<!--              <mat-header-cell *matHeaderCellDef>Nro RMTSA</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Nro RMTSA">{{element.nroTramite}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="emision">-->
-<!--              <mat-header-cell *matHeaderCellDef mat-sort-header>Emisión</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Emisión">{{element.fecEmision | date:'dd/MM/yyyy'}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="vencimiento">-->
-<!--              <mat-header-cell *matHeaderCellDef mat-sort-header>Vencimiento</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Vencimiento">{{element.fecVencimiento | date:'dd/MM/yyyy'}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="cuit">-->
-<!--              <mat-header-cell *matHeaderCellDef>CUIT</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="CUIT">{{element.cuit}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="titular">-->
-<!--              <mat-header-cell *matHeaderCellDef>Titular</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Titular">{{element.nombreTitular}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="dominio">-->
-<!--              <mat-header-cell *matHeaderCellDef>Dominio</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Dominio">{{element.dominio}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="marca">-->
-<!--              <mat-header-cell *matHeaderCellDef>Marca</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Marca">{{element.marca}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="modelo">-->
-<!--              <mat-header-cell *matHeaderCellDef>Modelo</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Modelo">{{element.modelo}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="estado">-->
-<!--              <mat-header-cell *matHeaderCellDef>Estado</mat-header-cell>-->
-<!--              <mat-cell *matCellDef="let element" data-label="Estado">{{element.estadoId}}</mat-cell>-->
-<!--            </ng-container>-->
-
-<!--            <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>-->
-<!--            <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>-->
-<!--          &ndash;&gt;-->
-<!--          </mat-table>-->
-
-<!--          <h6 *ngIf="!this.empleados.length" class="alert alert-secondary text-center">-->
-<!--            No se encuentran empleados para mostrar, realice una nueva búsqueda.-->
-<!--          </h6>-->
-
-<!--          <mat-paginator *ngIf="this.empleados.length > 0"-->
-<!--                         [length]="this.empleados.length"-->
-<!--                         [pageSize]="10"-->
-<!--                         [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </mat-card-content>-->
-<!--  </mat-card>-->
-
-<!--</div>-->
+  <br>
 
 
-<div class="col d-flex justify-content-between align-items-center">
-  <p class="titulo">Consultar Empleados</p>
-  <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoEmpleado()">Registrar nuevo empleado</button>
+  <mat-card-header class="header-card">
+    <h2 style="color: grey">Empleados encontrados</h2>
+  </mat-card-header>
+
+  <mat-card>
+    <mat-card-content>
+      <div class="row">
+        <div class="col-md-12">
+          <mat-table [dataSource]="tableDataSource" matSort>
+            <ng-container matColumnDef="nombreUsuario">
+              <mat-header-cell *matHeaderCellDef>USUARIO</mat-header-cell>
+              <mat-cell *matCellDef="let usuario" data-label="Usuario">{{ usuario.nombreUsuario }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="nombre">
+              <mat-header-cell *matHeaderCellDef>NOMBRE</mat-header-cell>
+              <mat-cell *matCellDef="let usuario" data-label="Nombre">{{ usuario.nombre }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="apellido">
+              <mat-header-cell *matHeaderCellDef>APELLIDO</mat-header-cell>
+              <mat-cell *matCellDef="let usuario" data-label="Apellido">{{ usuario.apellido }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="cuil">
+              <mat-header-cell *matHeaderCellDef>CUIL</mat-header-cell>
+              <mat-cell *matCellDef="let usuario" data-label="Cuil">{{ usuario.cuil }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="acciones">
+              <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
+              <mat-cell *matCellDef="let usuario" data-label="Acciones">
+                <button class="btn" mat-icon-button matTooltip="Ver" (click)="verEmpleado(usuario, false)">
+                  <mat-icon class="ver">visibility</mat-icon>
+                </button>
+                <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verEmpleado(usuario, true)">
+                  <mat-icon class="editar">edit</mat-icon>
+                </button>
+                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarUsuario(usuario.id)">
+                  <mat-icon class="eliminar">delete</mat-icon>
+                </button>
+              </mat-cell>
+            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
+            <mat-row class="queue-row" *matRowDef="let row; columns: columnas"></mat-row>
+
+          </mat-table>
+
+          <h6 *ngIf="!this.empleados.length" class="alert alert-secondary text-center">
+            No se encuentran empleados para mostrar, realice una nueva búsqueda.
+          </h6>
+
+          <mat-paginator *ngIf="this.empleados.length > 0"
+                         [length]="this.empleados.length"
+                         [pageSize]="10"
+                         [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </div>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
+
+
