--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: white;
 }
 
+#btnBuscar2 {
+  background-color: #e15b35;
+  color: white;
+}
+
 .ver {
   color: #3400c6;
 }
