fix: color confirmacion en btn de notificacion

--- a/src/app/shared/messages/messages.component.html
+++ b/src/app/shared/messages/messages.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="col">
         <button mat-raised-button class="btn round margin-right-08" id="btnCancelar" [matDialogClose]="false">Cancelar</button>
-        <button mat-raised-button color="accent" type="submit" id="btnAceptar" [matDialogClose]="true">Aceptar</button>
+        <button mat-raised-button color="accent" type="submit" class="btnAceptar" [matDialogClose]="true">Aceptar</button>
       </div>
     </div>
 
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="col">
-        <button mat-raised-button color="accent" type="submit" id="btnOk" [mat-dialog-close]="true">Cerrar</button>
+        <button mat-raised-button color="accent" type="submit" class="btnAceptar" [mat-dialog-close]="true">Cerrar</button>
       </div>
     </div>
     <!--    Delete-->
@@ -49,7 +49,7 @@
       </div>
       <div class="col">
         <button mat-raised-button class="btn round margin-right-08" id="btnCancelar" [mat-dialog-close]="false">Cancelar</button>
-        <button mat-raised-button color="accent" type="submit" id="btnAceptar" [mat-dialog-close]="true">Aceptar</button>
+        <button mat-raised-button color="accent" type="submit" class="btnAceptar" [mat-dialog-close]="true">Aceptar</button>
       </div>
     </div>
 
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="col">
-        <button mat-raised-button color="accent" type="submit" id="btnOk" [mat-dialog-close]="true">Cerrar</button>
+        <button mat-raised-button color="accent" type="submit" class="btnAceptar" [mat-dialog-close]="true">Cerrar</button>
       </div>
     </div>
 
@@ -78,7 +78,7 @@
         <p class="messageCorrect">{{ message }}</p>
       </div>
       <div class="col">
-        <button mat-raised-button color="accent" type="submit" id="btnAceptar" [mat-dialog-close]="true">Aceptar</button>
+        <button mat-raised-button color="accent" type="submit" class="btnAceptar" [mat-dialog-close]="true">Aceptar</button>
       </div>
     </div>
 
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="col">
-        <button mat-raised-button color="accent" type="submit" id="btnOk" [mat-dialog-close]="true">Cerrar</button>
+        <button mat-raised-button color="accent" type="submit" class="btnAceptar" [mat-dialog-close]="true">Cerrar</button>
       </div>
     </div>
 
@@ -111,7 +111,7 @@
         <div [innerHTML]="message" class="message"></div>
       </div>
       <div class="col">
-        <button mat-raised-button color="accent" type="submit" id="btnOk" [mat-dialog-close]="true">Cerrar</button>
+        <button mat-raised-button color="accent" type="submit" class="btnAceptar" [mat-dialog-close]="true">Cerrar</button>
       </div>
     </div>
 
