--- a/src/app/shared/messages/messages.component.scss
+++ b/src/app/shared/messages/messages.component.scss
@@ -1,5 +1,9 @@
 .bodyMessage {
-  padding: 0 10px 20px 10px;
+  margin: 20px 30px;
+}
+
+.col {
+  margin: 0px 0px 30px 0px;
 }
 
 p {
@@ -77,4 +81,9 @@ h3 {
 
 .warning-color {
   color: #cd9d0a;
+}
+
+.btnAceptar {
+  background-color: #e15b35;
+  color: white;
 }
