Feat: Se agrego el componente consultar-productos

--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -142,7 +142,7 @@
           </mat-table>
 
           <h6 *ngIf="!this.productos.length" class="alert alert-secondary text-center">
-            No se encuentran proveedores para mostrar, realice una nueva búsqueda.
+            No se encuentran productos para mostrar, por favor realice una nueva búsqueda.
           </h6>
 
           <mat-paginator *ngIf="this.productos.length > 0"
