--- a/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.scss
+++ b/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.scss
@@ -40,21 +40,22 @@
   flex-grow: 1;
   margin-left: 20px;
   position: relative;
+  width: 700px !important;
 }
 
 .comment-textarea {
+  height: 450px !important;
   width: 100%;
-  height: 500px;
   font-size: 16px;
-  padding: 10px;
-  padding-bottom: 40px;
+  padding: 10px 10px 40px;
   box-sizing: border-box;
+  resize: none;
 }
 
 .emoji-button {
   position: absolute;
-  bottom: 18px;
-  left: 2px;
+  bottom: 25px;
+  left: 3px;
   z-index: 1
 }
 
