feat: configuraciones funcionales
- Se obtienen todos los datos planteados para la configuración de la base de datos.
- De momento, se permite obtener y modificar la configuración (resta el registro inicial de la primer fila).
- Cambio de logo funcional en header (el logo por comodidad se guarda en base64 directamente en la base de datos).

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,7 +5,7 @@
         <mat-icon>menu</mat-icon>
       </button>
       <a class="ml-2">
-        <img class="header-logo" src="../../../assets/imgs/logo-header.png" alt="logo-caja"/>
+        <img class="header-logo" [src]="logoUrl ? logoUrl : '../../../assets/imgs/logo-header.png'" alt="logo-caja"/>
       </a>
     </div>
     <div class="float-right mt-15" fxFlex fxLayout="row" fxLayoutAlign="flex-end">
