--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -51,7 +51,8 @@ mat-sidenav {
 .header-logo {
   width: 35px;
   transition: max-width 0.5s ease;
-  margin-left: 15px
+  margin-left: 15px;
+  object-fit: cover;
 }
 
 ul li {
