--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -2,7 +2,7 @@
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
-        <p class="titulo">Editar Configuración del Usuario</p>
+        <p class="titulo">Editar Configuración</p>
       </div>
     </div>
 
@@ -12,106 +12,115 @@
     <h4 style="color: grey">Información del Usuario</h4>
 
     <form [formGroup]="form">
-      <!-- idUsuario -->
+      <!-- idUsuario y Nombre de Usuario -->
       <div class="row pt-4">
         <div class="col-md-6">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>ID Usuario</mat-label>
-            <input type="text" matInput [formControl]="idUsuario" [disabled]="true"/>
+            <input type="text" matInput [formControl]="idUsuario"/>
           </mat-form-field>
         </div>
-      </div>
-
-      <!-- Nombre de Usuario -->
-      <div class="row pt-4">
         <div class="col-md-6">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Nombre de Usuario</mat-label>
-            <input type="text" matInput [formControl]="nombreUsuario" [disabled]="true"/>
+            <input type="text" matInput [formControl]="nombreUsuario"/>
           </mat-form-field>
         </div>
       </div>
 
-      <!-- Razon Social -->
+      <br>
+      <h4 style="color: grey">Información del Comercio</h4>
+
+      <!-- Razon Social y Domicilio Comercial -->
       <div class="row pt-4">
         <div class="col-md-6">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Razón Social</mat-label>
-            <input type="text" matInput [formControl]="razonSocial"/>
+            <input type="text" matInput [formControl]="razonSocial" />
           </mat-form-field>
         </div>
-      </div>
-
-      <!-- Domicilio Comercial -->
-      <div class="row pt-4">
         <div class="col-md-6">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Domicilio Comercial</mat-label>
-            <input type="text" matInput [formControl]="domicilioComercial"/>
+            <input type="text" matInput [formControl]="domicilioComercial" />
           </mat-form-field>
         </div>
       </div>
 
-      <!-- CUIT -->
+      <!-- CUIT, Fecha de Inicio de Actividades y Condición IVA -->
       <div class="row pt-4">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>CUIT</mat-label>
-            <input type="text" matInput [formControl]="cuit"/>
+            <input type="text" mask="00-00000000-0" matInput [formControl]="cuit" />
           </mat-form-field>
         </div>
-      </div>
-
-      <!-- Fecha de Inicio de Actividades -->
-      <div class="row pt-4">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Fecha de Inicio de Actividades</mat-label>
-            <input matInput [matDatepicker]="picker" [formControl]="fechaInicioActividades"/>
+            <input matInput [matDatepicker]="picker" [formControl]="fechaInicioActividades" />
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         </div>
-      </div>
-
-      <!-- Condición IVA -->
-      <div class="row pt-4">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Condición IVA</mat-label>
-            <input type="text" matInput [formControl]="condicionIva"/>
+            <mat-label>Condición frente al IVA</mat-label>
+            <input type="text" matInput [formControl]="condicionIva" />
           </mat-form-field>
         </div>
       </div>
+
+      <br>
+      <h4 style="color: grey">Diseño de la interfaz de usuario</h4>
 
       <!-- Logo -->
       <div class="row pt-4">
         <div class="col-md-6">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Logo</mat-label>
-            <input type="file" matInput (change)="onFileChange($event)"/>
-          </mat-form-field>
-          <div class="logo-preview">
-            <img [src]="logoUrl" alt="Logo Actual" class="img-thumbnail">
+          <div class="upload-container d-flex align-items-center mb-3"
+               (dragover)="onDragOver($event)"
+               (drop)="onDrop($event)"
+          >
+            <img *ngIf="logoUrl" [src]="logoUrl" class="preview-img">
+            <span *ngIf="!logoUrl" class="upload-text">Arrastra aquí...</span>
+            <input type="file" class="file-input" (change)="onFileSelected($event)">
           </div>
         </div>
       </div>
 
-      <!-- Contraseña de Instagram -->
+      <br><br>
+      <h4 style="color: grey">Información Adicional</h4>
+
+      <!-- Usuario de Instagram y Contraseña de Instagram -->
       <div class="row pt-4">
         <div class="col-md-6">
           <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Usuario de Instagram</mat-label>
+            <input type="text" matInput [formControl]="usuarioInstagram" />
+          </mat-form-field>
+        </div>
+        <div class="col-md-6">
+          <mat-form-field appearance="outline" class="w-100">
             <mat-label>Contraseña de Instagram</mat-label>
-            <input type="password" matInput [formControl]="contrasenaInstagram"/>
+            <input type="password" matInput [formControl]="contrasenaInstagram" />
           </mat-form-field>
         </div>
       </div>
     </form>
 
+    <br>
     <!-- Btn Guardar -->
     <div class="row text-right">
       <div class="col d-flex justify-content-end">
-        <button mat-raised-button color="primary" class="btn round" (click)="guardarConfiguracion()">Guardar</button>
+        <button mat-stroked-button color="warn" class="btn round" (click)="guardarConfiguracion()">Guardar</button>
+      </div>
+    </div>
+
+    <div class="lds-spinner-wrapper" *ngIf="isLoading">
+      <div class="lds-spinner">
+        <div></div><div></div><div></div><div></div>
+        <div></div><div></div><div></div><div></div>
+        <div></div><div></div><div></div><div></div>
       </div>
     </div>
   </mat-card>
