--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -1,3 +1,4 @@
+<!-- Formulario HTML -->
 <div class="container py-3 col-xl-11">
   <br>
   <div class="row">
@@ -30,6 +31,17 @@
       </div>
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Proveedor</mat-label>
+          <mat-select [formControl]="txProveedor">
+            <mat-option *ngFor="let proveedor of listaProveedores" [value]="proveedor.id">
+              {{proveedor.nombre}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="txProveedor.invalid">{{getErrorMessage(txProveedor)}}</mat-error>
+        </mat-form-field>
+      </div>
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
           <mat-label>Tipo Producto</mat-label>
           <input type="text" matInput [formControl]="txTipoProducto" [matAutocomplete]="autoCompleteTipoProducto" (keypress)="soloLetras($event)" />
           <mat-error *ngIf="txTipoProducto.invalid">{{getErrorMessage(txTipoProducto)}}</mat-error>
@@ -52,24 +64,11 @@
           </mat-option>
         </mat-autocomplete>
       </div>
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Proveedor</mat-label>
-          <input type="text" matInput [formControl]="txProveedor" [matAutocomplete]="autoCompleteProveedor" (keypress)="soloLetras($event)" />
-          <mat-error *ngIf="txProveedor.invalid">{{getErrorMessage(txProveedor)}}</mat-error>
-        </mat-form-field>
-        <mat-autocomplete #autoCompleteProveedor="matAutocomplete">
-          <mat-option *ngFor="let proveedor of proveedoresFiltrados" [value]="proveedor.nombre">
-            {{proveedor.nombre}}
-          </mat-option>
-        </mat-autocomplete>
-      </div>
     </div>
   </form>
 
   <mat-divider></mat-divider>
   <br>
-
   <div class="row text-right">
     <div class="col d-flex justify-content-end">
       <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnCancelar">
@@ -82,3 +81,4 @@
   </div>
   <br>
 </div>
+
